language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_local_function.snap
---
source: language-server/src/tests/hover.rs
expression: "\nfn my_fn() {\n  Nil\n}\n\nfn main() {\n  my_fn\n}\n"
---

fn my_fn() {
  Nil
}

fn main() {
  my_fn
  ▔↑▔▔▔
}


----- Hover content (markdown) -----
```gleam
fn() -> Nil
```
