language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_module_constant.snap
---
source: language-server/src/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nconst one = 1\n"
---

/// Exciting documentation
/// Maybe even multiple lines
const one = 1
▔▔▔▔▔▔↑▔▔    


----- Hover content (markdown) -----
```gleam
Int
```
 Exciting documentation
 Maybe even multiple lines
