language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_annotated_todo.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble: String = todo\n"
---

const wibble: String = todo
                       ↑▔▔▔


----- Hover content (markdown) -----
```gleam
String
```
