language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble = todo\n"
---

const wibble = todo
▔▔▔▔▔▔↑▔▔▔▔▔       


----- Hover content (markdown) -----
```gleam
a
```
