language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo_in_annotated_constructor.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble: Result(String, Int) = Ok(todo)\n"
---

const wibble: Result(String, Int) = Ok(todo)
                                       ↑▔▔▔ 


----- Hover content (markdown) -----
```gleam
String
```
