language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_on_constant_todo_in_bit_array.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst wibble = <<todo:utf8>>\n"
---

const wibble = <<todo:utf8>>
                 ↑▔▔▔       


----- Hover content (markdown) -----
```gleam
String
```
